--- a/odoo_customer_portal/static/description/index.html
+++ b/odoo_customer_portal/static/description/index.html
@@ -4,7 +4,7 @@
 <section class="oe_container">
     <section class="oe_spaced mw-100">
         <div class="text-center">
-            <h2 class="display-4 font-weight-bold" style="font-size: 30px;line-height: 41px;">Odoo Vendor Portal</h2>
+            <h2 class="display-4 font-weight-bold" style="font-size: 30px;line-height: 41px;">Odoo customer Portal</h2>
             <p class="font-italic text-muted" style="font-weight: 500;font-size: 16px;line-height: 20px;">"Simplify purchase management to Odoo"</p>
         </div>
     </section>
@@ -13,7 +13,7 @@
         <div class="row m-auto">
             <div class="col-lg-6 rounded">
                 <p style="font-weight: 500;font-size: 16px;line-height: 28px;color: #484848;">
-                    Stand alone vendor management solution for you. To reduce dependencies on email communication and delay in correspondence, assign individual portals to vendors in their Odoo website accounts. So, you can send RFQs directly to the vendor portal and communicate instantly. And vendors can check the status of their quotations from the vendor portal.
+                    Stand alone customer management solution for you. To reduce dependencies on email communication and delay in correspondence, assign individual portals to customers in their Odoo website accounts. So, you can send RFQs directly to the customer portal and communicate instantly. And customers can check the status of their quotations from the customer portal.
                 </p>
             </div>
             <div class="col-lg-6 rounded border-left border-dark">
@@ -23,7 +23,7 @@
                     <span class="pl-2" style="font-weight: 600;font-size: 14px;line-height: 10px;color: #444444;">User Guide</span>
                 </div>
                 <div class="ml-lg-3 mt-1">
-                    <span style="font-size: 15px;line-height: 10px;color: #222222;">https://webkul.com/blog/odoo-vendor-portal/</span>
+                    <span style="font-size: 15px;line-height: 10px;color: #222222;">https://webkul.com/blog/odoo-customer-portal/</span>
                 </div>
             </div>
         </div>
@@ -42,9 +42,9 @@
                 </div>
             </div>
             <div class="px-4 py-1" style="font-weight: 400;font-size: 16px;color: #747474;line-height: 26px;">
-                <p>The module adds a personal purchase management portal in a Website account for every vendor.</p>
-                <p>Sign up vendors/suppliers for your acquisition process.</p>
-                <p>Effortlessly combine Odoo website and Supplier management to manage your vendors directly from Odoo.</p>
+                <p>The module adds a personal purchase management portal in a Website account for every customer.</p>
+                <p>Sign up customers/suppliers for your acquisition process.</p>
+                <p>Effortlessly combine Odoo website and Supplier management to manage your customers directly from Odoo.</p>
             </div>
         </div>
         <div class="mt-4 shadow-sm card p-1" style="border-radius: 2px;">
@@ -54,7 +54,7 @@
                 </div>
                 <div class="d-flex align-items-center">
                     <h3 class="px-3" style="font-size: 20px;line-height: 30px;color: #333333;">
-                        Odoo Vendor Portal management solves everything!!
+                        Odoo customer Portal management solves everything!!
                     </h3>
                 </div>
             </div>
